--- a/index.html
+++ b/index.html
@@ -64,172 +64,174 @@
     </section>
     <!-- ============== header end ============== -->
 
-    <!-- ============== feature start ============== -->
-    <section class="feature-section pt-5">
-      <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-xl-5 col-lg-6 col-md-10">
-            <div class="feature-wrapper">
-              <div class="single-feature">
-                <div class="image">
-                  <img src="assets/images/feature/feature-1.png" alt="" class="img-fluid">
+    <section class="d-flex flex-column">
+      <!-- ============== feature start ============== -->
+      <div class="feature-section pt-5 order-last order-md-first">
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-xl-5 col-lg-6 col-md-10">
+              <div class="feature-wrapper">
+                <div class="single-feature d-sm-flex text-center text-sm-start">
+                  <div class="image mx-auto me-sm-3 mb-3 mb-sm-0">
+                    <img src="assets/images/feature/feature-1.png" alt="" class="img-fluid">
+                  </div>
+                  <div class="feature-content">
+                    <h4>Find the Perfect Fit</h4>
+                    <p>Everybody is different, which is why we offer styles for every body.</p>
+                  </div>
                 </div>
-                <div class="feature-content">
-                  <h4>Find the Perfect Fit</h4>
-                  <p>Everybody is different, which is why we offer styles for every body.</p>
+                <div class="single-feature d-sm-flex text-center text-sm-start">
+                  <div class="image mx-auto me-sm-3 mb-3 mb-sm-0">
+                    <img src="assets/images/feature/feature-2.png" alt="" class="img-fluid">
+                  </div>
+                  <div class="feature-content">
+                    <h4>Free Exchanges</h4>
+                    <p>One of the many reasons you can shop with peace of mind.</p>
+                  </div>
                 </div>
-              </div>
-              <div class="single-feature">
-                <div class="image">
-                  <img src="assets/images/feature/feature-2.png" alt="" class="img-fluid">
-                </div>
-                <div class="feature-content">
-                  <h4>Free Exchanges</h4>
-                  <p>One of the many reasons you can shop with peace of mind.</p>
-                </div>
-              </div>
-              <div class="single-feature">
-                <div class="image">
-                  <img src="assets/images/feature/feature-3.png" alt="" class="img-fluid">
-                </div>
-                <div class="feature-content">
-                  <h4>Contact Our Seller</h4>
-                  <p>They are here to help you. That's quite literally what we pay them for.</p>
+                <div class="single-feature d-sm-flex text-center text-sm-start">
+                  <div class="image mx-auto me-sm-3 mb-3 mb-sm-0">
+                    <img src="assets/images/feature/feature-3.png" alt="" class="img-fluid">
+                  </div>
+                  <div class="feature-content">
+                    <h4>Contact Our Seller</h4>
+                    <p>They are here to help you. That's quite literally what we pay them for.</p>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-xl-6 col-lg-6 col-md-10 offset-xl-1">
-            <div class="feature-image mt-5 mt-lg-0">
-              <img src="assets/images/feature/feature-image.png" alt="" class="img-fluid">
+            <div class="col-xl-6 col-lg-6 col-md-10 offset-xl-1">
+              <div class="feature-image mt-5 mt-lg-0">
+                <img src="assets/images/feature/feature-image.png" alt="" class="img-fluid">
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- ============== feature end ============== -->
+      <!-- ============== feature end ============== -->
 
-    <!-- ============== products end ============== -->
-    <section class="products-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-12">
-            <div class="title">
-              <h2 class="text-uppercase">Casual backpack</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 col-md-6">
-            <div class="single-product">
-              <div class="product-image">
-                <img src="assets/images/product/product-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="product-content">
-                <h4> <a href="#0"> Nike Sportswear Hayward </a> </h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="product-action d-flex align-items-center justify-content-between">
-                <span class="price">$234</span>
-                <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+      <!-- ============== products end ============== -->
+      <div class="products-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12">
+              <div class="title">
+                <h2 class="text-uppercase">Casual backpack</h2>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-md-6">
-            <div class="single-product">
-              <div class="product-image">
-                <img src="assets/images/product/product-2.png" alt="" class="img-fluid">
-              </div>
-              <div class="product-content">
-                <h4> <a href="#0"> School backpack </a> </h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="product-action d-flex align-items-center  justify-content-between">
-                <span class="price">$234</span>
-                <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+          <div class="row">
+            <div class="col-xl-4 col-md-6">
+              <div class="single-product">
+                <div class="product-image">
+                  <img src="assets/images/product/product-1.png" alt="" class="img-fluid">
+                </div>
+                <div class="product-content">
+                  <h4> <a href="#0"> Nike Sportswear Hayward </a> </h4>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="product-action d-flex align-items-center justify-content-between">
+                  <span class="price">$234</span>
+                  <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-xl-4 col-md-6">
-            <div class="single-product">
-              <div class="product-image">
-                <img src="assets/images/product/product-3.png" alt="" class="img-fluid">
+            <div class="col-xl-4 col-md-6">
+              <div class="single-product">
+                <div class="product-image">
+                  <img src="assets/images/product/product-2.png" alt="" class="img-fluid">
+                </div>
+                <div class="product-content">
+                  <h4> <a href="#0"> School backpack </a> </h4>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="product-action d-flex align-items-center  justify-content-between">
+                  <span class="price">$234</span>
+                  <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+                </div>
               </div>
-              <div class="product-content">
-                <h4> <a href="#0"> CityLite Security Backpack  </a> </h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="product-action d-flex align-items-center justify-content-between">
-                <span class="price">$234</span>
-                <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+            </div>
+            <div class="col-xl-4 col-md-6">
+              <div class="single-product">
+                <div class="product-image">
+                  <img src="assets/images/product/product-3.png" alt="" class="img-fluid">
+                </div>
+                <div class="product-content">
+                  <h4> <a href="#0"> CityLite Security Backpack  </a> </h4>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="product-action d-flex align-items-center justify-content-between">
+                  <span class="price">$234</span>
+                  <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- ============== products end ============== -->
+      <!-- ============== products end ============== -->
 
-    <!-- ============== products end ============== -->
-    <section class="products-section products-section-two">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-12">
-            <div class="title">
-              <h2 class="text-uppercase">Travel backpack</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 col-md-6">
-            <div class="single-product">
-              <div class="product-image">
-                <img src="assets/images/product/product-4.png" alt="" class="img-fluid">
-              </div>
-              <div class="product-content">
-                <h4> <a href="#0"> Travel Sport </a> </h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="product-action d-flex align-items-center justify-content-between">
-                <span class="price">$234</span>
-                <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+      <!-- ============== products end ============== -->
+      <div class="products-section products-section-two">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12">
+              <div class="title">
+                <h2 class="text-uppercase">Travel backpack</h2>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-md-6">
-            <div class="single-product">
-              <div class="product-image">
-                <img src="assets/images/product/product-5.png" alt="" class="img-fluid">
-              </div>
-              <div class="product-content">
-                <h4> <a href="#0"> Jack Wolfskin West Highland </a> </h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="product-action d-flex align-items-center justify-content-between">
-                <span class="price">$234</span>
-                <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+          <div class="row">
+            <div class="col-xl-4 col-md-6">
+              <div class="single-product">
+                <div class="product-image">
+                  <img src="assets/images/product/product-4.png" alt="" class="img-fluid">
+                </div>
+                <div class="product-content">
+                  <h4> <a href="#0"> Travel Sport </a> </h4>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="product-action d-flex align-items-center justify-content-between">
+                  <span class="price">$234</span>
+                  <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-xl-4 col-md-6">
-            <div class="single-product">
-              <div class="product-image">
-                <img src="assets/images/product/product-6.png" alt="" class="img-fluid">
+            <div class="col-xl-4 col-md-6">
+              <div class="single-product">
+                <div class="product-image">
+                  <img src="assets/images/product/product-5.png" alt="" class="img-fluid">
+                </div>
+                <div class="product-content">
+                  <h4> <a href="#0"> Jack Wolfskin West Highland </a> </h4>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="product-action d-flex align-items-center justify-content-between">
+                  <span class="price">$234</span>
+                  <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+                </div>
               </div>
-              <div class="product-content">
-                <h4> <a href="#0"> Hiking Trekking Bag Camping </a> </h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              </div>
-              <div class="product-action d-flex align-items-center justify-content-between">
-                <span class="price">$234</span>
-                <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+            </div>
+            <div class="col-xl-4 col-md-6">
+              <div class="single-product">
+                <div class="product-image">
+                  <img src="assets/images/product/product-6.png" alt="" class="img-fluid">
+                </div>
+                <div class="product-content">
+                  <h4> <a href="#0"> Hiking Trekking Bag Camping </a> </h4>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="product-action d-flex align-items-center justify-content-between">
+                  <span class="price">$234</span>
+                  <a href="#0" class="main-btn"> <i class="lni lni-cart"></i> BUY NOW</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- ============== products end ============== -->
     </section>
-    <!-- ============== products end ============== -->
 
     <!-- ============== offer section start ============== -->
     <section class="offer-section">
